--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header {
   top: 0px;
   width: 100%;
   font-size: 14px;
+  z-index: 5;
 }
 header .overlay {
   display: flex;
@@ -72,6 +73,10 @@ header button:hover {
 
 header button:hover a {
   color: white;
+}
+/* ---------------------- MOBILE NAV  */
+.mobile_topbar {
+  display: none;
 }
 /* ---------------------- MAIN  */
 
@@ -125,10 +130,12 @@ header button:hover a {
 }
 
 #Home .overlay {
-  background-color: #000000c9;
+  background-color: #000000b6;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  z-index: 2;
 }
 
 #Product_details .overlay {
@@ -142,7 +149,7 @@ header button:hover a {
 
 #Historique .overlay {
   background-color: #000000c9;
-  display: flex;
+  display: grid;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -185,6 +192,71 @@ header button:hover a {
   font-size: 1rem;
   letter-spacing: 3px;
   font-weight: lighter;
+}
+
+#slider {
+  overflow: hidden;
+  height: 100vh;
+  position: relative;
+}
+#slider figure {
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  animation: slider 20s infinite;
+}
+#slider figure .img {
+  width: 20%;
+  float: left;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+}
+
+@keyframes slider {
+  0% {
+    left: 0;
+  }
+  20% {
+    left: 0;
+  }
+  25% {
+    left: -100%;
+  }
+  45% {
+    left: -100%;
+  }
+  50% {
+    left: -200%;
+  }
+  70% {
+    left: -200%;
+  }
+  75% {
+    left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: -400%;
+  }
+}
+.s1 {
+  background-image: url("img/STABILA_1.jpeg");
+}
+.s2 {
+  background-image: url("img/METABO_1.jpg");
+}
+.s3 {
+  background-image: url("img/STIHL_1.jpeg");
+}
+.s4 {
+  background-image: url("img/HADEF_1.jpeg");
+}
+.s5 {
+  background-image: url("img/STABILA_1.jpeg");
 }
 /* ---------------------- MARQUE */
 .product_container {
@@ -429,7 +501,14 @@ header button:hover a {
   grid-area: iframe;
   border-radius: 7px;
 }
-
+/* -------------- */
+#side_menu {
+  display: none;
+}
+.img_menu {
+  display: none;
+}
+/* ------------------- */
 /* ---------------------- RESPONSIVE  */
 @media screen and (max-width: 800px) {
   /* ---------------------- MARQUE */
@@ -483,9 +562,6 @@ header button:hover a {
     align-self: start;
     margin-left: 30px;
   }
-  header nav {
-    display: none;
-  }
   /* ---------------------- CONTACT  */
 
   #Contact .overlay {
@@ -511,5 +587,173 @@ header button:hover a {
   #Contact .overlay .Copyrights {
     margin-top: -20px;
   }
+  /* ---------------------- HEADER  */
+  header {
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    left: -100%;
+    width: 100%;
+    font-size: 14px;
+    z-index: 6;
+    transition: 800ms ease-in-out;
+  }
+  header .overlay {
+    height: 100%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: white;
+    padding: 5% 0px 5% 0px;
+    gap: 20px;
+    box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.247);
+  }
+  .logo {
+    height: 70px;
+    margin-left: 30px;
+  }
+  .logo img {
+    height: 100%;
+  }
+
+  header nav {
+    /* background-color: #2c2c2c; */
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  header nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    /* background-color: #36554b; */
+  }
+
+  header nav ul li {
+    display: flex;
+    justify-content: flex-start;
+    list-style-type: none;
+    padding: 20px 0px 20px 30px;
+    /* background-color: tomato; */
+    width: 100%;
+  }
+  header nav ul li:hover {
+    background-color: #36554b;
+  }
+  header nav ul li:hover a {
+    color: white;
+  }
+  header nav ul li a {
+    text-decoration: none;
+    color: teal;
+  }
+
+  header button {
+    margin-top: 20px;
+    margin-left: 30px;
+    width: 130px;
+    height: 40px;
+    border: 2px solid teal;
+    border-radius: 7px;
+    background-color: transparent;
+  }
+  header button a {
+    text-decoration: none;
+    color: teal;
+  }
+  header button:hover {
+    background-color: teal;
+  }
+
+  header button:hover a {
+    color: white;
+  }
+  .mobile_topbar {
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    z-index: 5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 15px 10% 15px 15%;
+  }
+  .mobile_topbar .logo {
+    height: 40px;
+    margin-left: 0px;
+  }
+  .mobile_topbar button {
+    width: 130px;
+    height: 40px;
+    border: 2px solid teal;
+    border-radius: 7px;
+    background-color: transparent;
+  }
+  .mobile_topbar button a {
+    text-decoration: none;
+    color: teal;
+  }
+  .mobile_topbar button:hover {
+    background-color: teal;
+  }
+
+  .mobile_topbar button:hover a {
+    color: white;
+  }
+
+  #side_menu:checked ~ header {
+    left: 0%;
+    transition: 800ms ease-in-out;
+  }
+  #side_menu {
+    position: fixed;
+    left: 5%;
+    top: 20px;
+    width: 30px;
+    height: 30px;
+    z-index: 10;
+    opacity: 0;
+    display: block;
+  }
+  .img_menu {
+    position: fixed;
+    left: 5%;
+    top: 20px;
+    width: 30px;
+    height: 30px;
+    z-index: 9;
+    display: block;
+  }
+  .blanc_q {
+    background-color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px;
+  }
 }
-/* ----------------------  */
+/* ---------------------- additionnal section*/
+.blanc_q {
+  background-color: white;
+  width: 100%;
+  display: flex;
+  padding: 20px;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  min-height: 50vh; 
+}
+.d_v {
+  text-align: center;
+  padding: 10px;
+  font-size: 1rem;
+}
