--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   /* -------- Colors ------- */
 
   --Color-Primary: #618c88;
-  --Color-Highight: #f2f2f2;
+  --Color-Highight: #ffffff;
   --Color-dark: #0d0d0d;
   --Color-Background: #f2f2f2;
   --Color-Container: #ffffff;
@@ -67,7 +67,6 @@ header {
   left: 0px;
   right: 0px;
   padding: 15px 3%;
-
   z-index: 5;
 }
 .logo {
@@ -116,10 +115,6 @@ header nav ul li a:hover {
 header img {
   height: 100%;
 }
-/* ---------------------- Section */
-/* .section {
-  min-height: 100vh;
-} */
 
 /* ---------------------- Accueil */
 #Accueil.section {
@@ -141,17 +136,18 @@ header img {
   color: var(--Color-Highight);
   position: absolute;
   z-index: 3;
+  border-bottom: solid 5px white;
 }
 
 #Accueil.section .overlay h1 {
   margin-top: 70px;
-  font-size: 9rem;
+  font-size: 7rem;
   text-decoration: 15px underline;
   letter-spacing: 5px;
 }
 #Accueil.section .overlay h2 {
   margin-top: 10px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
   letter-spacing: 2px;
 }
@@ -166,7 +162,7 @@ header img {
   width: 500%;
   margin: 0;
   left: 0;
-  animation: slider 30s infinite;
+  /* animation: slider 30s infinite; */
 }
 .slider figure .slide {
   width: 20%;
@@ -206,10 +202,10 @@ header img {
   }
 }
 .i1 {
-  background-image: url("./img/STABILA_cover.jpeg");
+  background-image: url("./img/METABO_cover.jpg");
 }
 .i2 {
-  background-image: url("./img/METABO_cover.jpg");
+  background-image: url("./img/STABILA_cover.jpeg");
 }
 .i3 {
   background-image: url("./img/STIHL_cover.jpeg");
@@ -218,15 +214,17 @@ header img {
   background-image: url("./img/HADEF_cover.jpeg");
 }
 .i5 {
-  background-image: url("./img/STABILA_cover.jpeg");
+  background-image: url("./img/METABO_cover.jpg");
 }
 /* ---------------------- Marque */
 
 #Marque.section {
   background-color: var(--Color-Highight);
   display: grid;
-  min-height: 60vh;
+  min-height: 65vh;
   scroll-margin-top: 140px;
+  border-bottom: solid 5px #a54848;
+  border-top: solid 5px #a54848;
 }
 #Marque.section .overlay {
   display: grid;
@@ -273,7 +271,7 @@ header img {
 /* ---------------------- Detail */
 
 #Details.section {
-  min-height: 40vh;
+  min-height: 100vh;
   background-color: var(--Color-Highight);
   background-size: cover;
   background-position: center;
@@ -363,6 +361,7 @@ header img {
 }
 .produit_details .variantes {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 50px;
 }
@@ -375,7 +374,7 @@ header img {
 
 /* ---------------------- Atout */
 #Atout.section {
-  background-color: var(--Color-Background);
+  background-color: var(--Color-Highight);
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -383,6 +382,7 @@ header img {
   gap: 40px;
   padding: 50px;
   border-bottom: solid 5px #a54848;
+  border-top: solid 5px #a54848;
 }
 #Atout .atout_container {
   text-align: center;
@@ -454,7 +454,7 @@ header img {
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
-  height: 40vh;
+  height: calc(100vh - 80px);
   display: grid;
 }
 #blanc.section .overlay {
@@ -468,19 +468,23 @@ header img {
   background-size: cover;
   background-position: center;
   filter: grayscale(100%);
-  border-top: solid 3px white;
+  border-top: solid 5px white;
+  border-bottom: solid 5px white;
+  display: grid;
+  scroll-margin-top: 80px;
 }
 #Historique.section .overlay {
   background-color: var(--Color-Dark-Overlay);
   display: grid;
   place-content: center;
-  padding: 13%;
+  padding: 100px 20%;
+  height: 100%;
 }
 #Historique.section .overlay p {
   color: var(--Color-Highight);
-  font-size: 1.2rem;
   letter-spacing: 1px;
-  line-height: 1.7rem;
+  font-size: var(--Font-size-Text-Text);
+  line-height: 1.3rem;
 }
 /* --------------------------Contact */
 #Contact {
@@ -498,6 +502,7 @@ header img {
   color: var(--Color-Highight);
   padding: 60px 5% 10px 5%;
   line-height: 1.5rem;
+  border-top: solid 5px white;
 }
 
 .f_s1 {
@@ -537,7 +542,6 @@ header img {
 
 .contact_info {
   font-size: var(--Font-size-Text-Text);
-  letter-spacing: 1px;
 }
 
 .f_menu {
@@ -585,6 +589,20 @@ header img {
   text-align: center;
   padding: 20px;
 }
+
+.fa-map-marker-alt,
+.fa-envelope-open-text,
+.fa-mobile-alt {
+  color: var(--Color-Primary);
+  font-size: 1rem;
+  background-color: #131d22;
+  margin-right: 8px;
+}
+
+.b_contact {
+  margin-right: 5px;
+}
+
 @media screen and (max-width: 800px) {
   /* ---------------- Detail */
   #Details.section {
@@ -619,15 +637,11 @@ header img {
 
   .produit_details .banner .banner_overlay img {
     width: 200px;
-    margin-bottom: -260px;
+    margin-bottom: -270px;
   }
 
   .produit_details .content {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    padding: 80px 10px;
+    padding: 90px 10px 30px 10px;
   }
   .produit_details .content article {
     display: flex;
@@ -650,13 +664,13 @@ header img {
   .produit_details .boutique {
     display: grid;
     place-content: center;
-    width: 160px;
+    width: 100%;
   }
   .produit_details .variantes {
     gap: 30px;
   }
   .produit_details .variantes li {
-    height: 50px;
+    height: 70px;
   }
   .produit_details .variantes li img {
     height: 100%;
@@ -671,10 +685,15 @@ header img {
   /* ---------------- historique */
 
   #Historique.section .overlay {
-    padding: 20px;
+    padding: 100px 20px;
   }
   #Historique.section .overlay p {
     font-size: var(--Font-size-Text-Text);
     line-height: 1.2rem;
+  }
+
+  /* ---------------- atout */
+  #Atout h5 {
+    padding: 10px;
   }
 }
