--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header {
   top: 0px;
   left: 0px;
   right: 0px;
-  padding: 15px 3%;
+  padding: 15px 4%;
   z-index: 5;
   box-shadow: var(--Shadow);
 }
@@ -120,7 +120,7 @@ header img {
 }
 
 .fa-bars {
-  margin-right: 15px;
+  margin-right: 20px;
   font-size: 25px;
   display: none;
   z-index: 8;
@@ -716,6 +716,9 @@ header img {
 
   /* ---------------------- Header */
 
+  header {
+    padding: 20px 5%;
+  }
   header nav {
     position: fixed;
     background-color: var(--Color-Highight);
@@ -781,8 +784,7 @@ header img {
   }
   #menu_bar:checked ~ label .fa-bars {
     position: absolute;
-    transition-delay: 300ms;
-    top: 25px;
+    top: 30px;
   }
 
   #menu_bar:checked ~ .sidemenu {
