--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
 #252525
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,800;1,700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,800;1,700&display=swap"); */
+
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap');
+
 :root {
   /* -------- Colors ------- */
 
@@ -26,7 +29,9 @@
 
   /* -------- Fonts -------- */
 
-  --Font: "Raleway", sans-serif;
+  /* --Font: "Raleway", sans-serif; */
+  --Font: 'Assistant', sans-serif;
+
   --Font-size-Text-Title: 2.5rem;
   --Font-size-Text-Sub_Title: 1.1rem;
   --Font-size-Text-Text: 0.9rem;
@@ -175,7 +180,7 @@ header img {
   width: 500%;
   margin: 0;
   left: 0;
-  animation: slider 20s infinite;
+  animation: slider 25s infinite;
 }
 .slider figure .slide {
   width: 20%;
@@ -215,19 +220,19 @@ header img {
   }
 }
 .i1 {
-  background-image: url("./img/METABO_cover.jpg");
+  background-image: url("./img/STIHL_slider.jpg");
 }
 .i2 {
-  background-image: url("./img/STABILA_cover.jpeg");
+  background-image: url("./img/METABO_slider.jpg");
 }
 .i3 {
-  background-image: url("./img/STIHL_cover.jpeg");
+  background-image: url("./img/STABILA_slider.png");
 }
 .i4 {
-  background-image: url("./img/HADEF_cover.jpeg");
+  background-image: url("./img/HADEF_slider.jpg");
 }
 .i5 {
-  background-image: url("./img/METABO_cover.jpg");
+  background-image: url("./img/STIHL_slider.jpg");
 }
 /* ---------------------- Marque */
 
@@ -326,7 +331,7 @@ header img {
   background-image: url("./img/STABILA_cover.jpeg");
 }
 #HADEF_details.produit_details .banner {
-  background-image: url("./img/HADEF_cover.jpeg");
+  background-image: url("./img/HADEF_cover.jpg");
 }
 
 .produit_details .banner .banner_overlay {
@@ -463,16 +468,27 @@ header img {
 }
 /* ---------------------- blanc */
 #blanc.section {
-  background-image: url("./img/STABILA_cover.jpeg");
+  /* background-image: url("./img/STABILA_cover.jpeg"); */
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 100px);
   display: grid;
 }
 #blanc.section .overlay {
   background-color: var(--Color-Dark-Overlay);
   height: 100%;
+}
+
+#blanc.section.b1 {
+  background-image: url("./img/METABO_cover.jpg");
+}
+#blanc.section.b2 {
+  background-image: url("./img/STIHL_cover.jpeg");
+}
+#blanc.section.b3 {
+  background-image: url("./img/HADEF_cover.jpg");
+  background-position: left;
 }
 /* ---------------------- Historique */
 #Historique.section {
@@ -485,6 +501,7 @@ header img {
   border-bottom: solid 5px white;
   display: grid;
   scroll-margin-top: 80px;
+  min-height: 100vh;
 }
 #Historique.section .overlay {
   background-color: var(--Color-Dark-Overlay);
@@ -608,7 +625,6 @@ header img {
 .fa-mobile-alt {
   color: var(--Color-Primary);
   font-size: 1rem;
-  background-color: #131d22;
   margin-right: 8px;
 }
 
