--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 /* @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,800;1,700&display=swap"); */
 
-@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap");
 
 :root {
   /* -------- Colors ------- */
@@ -30,7 +30,7 @@
   /* -------- Fonts -------- */
 
   /* --Font: "Raleway", sans-serif; */
-  --Font: 'Assistant', sans-serif;
+  --Font: "Assistant", sans-serif;
 
   --Font-size-Text-Title: 2.5rem;
   --Font-size-Text-Sub_Title: 1.1rem;
@@ -143,6 +143,7 @@ header img {
   background-attachment: fixed;
   background-image: url("./img/STABILA_cover.jpeg");
   text-align: center;
+  background-repeat: no-repeat;
 }
 
 #Accueil.section .overlay {
@@ -188,6 +189,7 @@ header img {
   height: 100vh;
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 @keyframes slider {
@@ -295,6 +297,7 @@ header img {
   background-position: center;
   background-attachment: fixed;
   background-image: url("./img/STABILA_cover.jpeg");
+  background-repeat: no-repeat;
   display: grid;
 }
 #Details.section .overlay {
@@ -317,6 +320,7 @@ header img {
 .produit_details .banner {
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   height: 100%;
   border-radius: 7px;
 }
@@ -472,6 +476,7 @@ header img {
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   height: calc(100vh - 100px);
   display: grid;
 }
@@ -496,6 +501,7 @@ header img {
   background-image: url("./img/Histoire.jpeg");
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   filter: grayscale(100%);
   border-top: solid 5px white;
   border-bottom: solid 5px white;
@@ -640,6 +646,7 @@ header img {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    background-repeat: no-repeat;
     background-image: url("./img/STABILA_cover.jpeg");
     display: grid;
   }
