--- a/style.css
+++ b/style.css
@@ -265,7 +265,6 @@ input[name="navigation"] {
   justify-content: center;
   align-items: center;
   padding: 140px 10px;
-  scroll-margin-top: 130px;
 }
 
 .marque {
@@ -367,13 +366,13 @@ input[name="navigation"] {
 
 .title {
   color: #618c88;
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   font-weight: 700;
   margin-top: 10px;
 }
 
 .sub-title {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.3;
   font-weight: 700;
 }
@@ -798,6 +797,10 @@ address {
   }
 
   /* ------------------ PRODUCT DETAILS  */
+
+  .historique {
+    font-size: 1rem;
+  }
 
   /* ------------------ CONTACT  */
 
