--- a/style.css
+++ b/style.css
@@ -798,9 +798,12 @@ address {
 
   /* ------------------ PRODUCT DETAILS  */
 
+  /* ------------------ HISTORIQUE  */
+
   .historique {
     font-size: 1rem;
   }
+  /* ------------------ HISTORIQUE  */
 
   /* ------------------ CONTACT  */
 
